# toyvpn-docker

./: .dockerignore  .gitignore  README.md  docker-compose.yml  install-server.sh  uninstall-server.sh
docker/client/: Dockerfile  client_entrypoint.sh
docker/server/: Dockerfile  server_entrypoint.sh
legacy/: ToyVpnServer.cpp
rust/: Cargo.toml
rust/src/: ip_pool.rs  main.rs  protocol.rs  session.rs  tun.rs
src/: Makefile  ToyVpnPing.c  ToyVpnServer.cpp
