[package]
name = "toyvpn-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "toyvpn-server"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
bytes = "1.9"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
thiserror = "2.0"
libc = "0.2"
nix = { version = "0.29", features = ["ioctl", "net", "socket"] }
socket2 = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
